Revert "fix tap highlight on mobile"
This reverts commit 4516a7772d4880ad7bee42a5ab39d2d74bf7179d.

--- a/public/style.css
+++ b/public/style.css
@@ -91,11 +91,6 @@
         300ms cubic-bezier(0.4, 0, 0.2, 1) both slide-from-right;
 }
 
-/* webkit tap highlight */
-* {
-    -webkit-tap-highlight-color: transparent;
-}
-
 
 /* button reset */
 button {
